Fix footer social list center alignment

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -50,3 +50,7 @@
   display: block;
   margin: 0 auto;
 }
+
+.site-footer .social-media-list {
+  padding-left: 15px;
+}
